--- a/config.json
+++ b/config.json
@@ -33,7 +33,8 @@
    "enter cvv in text field": {
      "action" : "input text",
      "target_method" : "id",
-     "target_name" : "cvv"
+     "target_name" : "cvv",
+     "text": "123"
    },
    "click on place order" : {
      "action" : "click",
